--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -19,6 +19,9 @@ spec:
         - name: www-redirect-pod
           image: bencowcher/wwwredirect:latest
           imagePullPolicy: Always
+          env:
+           - name: WHITELISTED_DOMAINS
+             value: "lightningbet.com.au,vinbet.com.au"
           ports:
             - name: http
               containerPort: 80
