--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -19,6 +19,11 @@ spec:
         - name: www-redirect-pod
           image: bencowcher/wwwredirect:latest
           imagePullPolicy: Always
+          env:
+            - name: APP_HOST_SOURCE
+              value: "kubernetes"
+            - name: APP_KUBERNETES_NAMESPACE
+              value: "default"
           ports:
             - name: http
               containerPort: 80
